#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(DeServer, 1.0, elton.xiao@gmail.com)
AM_INIT_AUTOMAKE(DeServer, 2.6)
AC_CONFIG_SRCDIR([src/DeServer.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

LT_INIT

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
